--- a/public/index.html
+++ b/public/index.html
@@ -64,5 +64,9 @@
     <script>
       var Alert = ReactBootstrap.Alert;
     </script>
+    <script
+      src="https://widget.cloudinary.com/v2.0/global/all.js"
+      type="text/javascript"
+    ></script>
   </body>
 </html>
